@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2002-2003 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -58,15 +58,24 @@ import megamek.common.units.Mek;
 import megamek.common.units.Targetable;
 import megamek.common.units.Terrain;
 import megamek.common.units.Terrains;
+import megamek.logging.MMLogger;
 import megamek.server.SmokeCloud;
 
 /**
- * Keeps track of the cumulative effects of intervening terrain on LOS
+ * Keeps track of the cumulative effects of intervening terrain on LOS.
+ *
+ * <p><b>Diagnostic logging:</b> This class has extensive DEBUG-level logging for LOS calculations.
+ * To enable it, set the log level for {@code megamek.common.LosEffects} to DEBUG in the logging configuration. This
+ * will log: the LOS rule set in use, attacker/target positions and heights, per-hex terrain accumulation (woods, smoke,
+ * buildings), and the final blocking decision with all accumulated modifier totals. Useful for diagnosing LOS
+ * discrepancies in bug reports.</p>
  *
  * @author Ben
  * @since October 14, 2002, 11:19 PM
  */
 public class LosEffects {
+
+    private static final MMLogger logger = MMLogger.create(LosEffects.class);
 
     public static class AttackInfo {
         public boolean attUnderWater;
@@ -248,10 +257,12 @@ public class LosEffects {
         }
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public int getPlantedFields() {
         return plantedFields;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public int getHeavyIndustrial() {
         return heavyIndustrial;
     }
@@ -309,6 +320,7 @@ public class LosEffects {
      *
      * @return Value of property targetCover.
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public boolean isTargetCover() {
         return targetCover >= COVER_LOW_LEFT;
     }
@@ -335,6 +347,7 @@ public class LosEffects {
         return attackerCover >= COVER_LOW_LEFT;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public int getAttackerCover() {
         return attackerCover;
     }
@@ -372,6 +385,15 @@ public class LosEffects {
     public boolean canSee() {
         // !blocked && (lightWoods + lightSmoke) + ((heavyWoods + heavySmoke) * 2) < 3;
         return hasLoS;
+    }
+
+    /**
+     * @return true if this LOS was blocked by the TacOps dead-zone rule. Set by the engine when a tall
+     *       intervening hill projects a geometric shadow that the lower unit sits inside (see the
+     *       private static dead-zone check called from {@link #calculateLos}).
+     */
+    public boolean isBlockedByDeadZone() {
+        return deadZone;
     }
 
     public static AttackInfo prepLosAttackInfo(Game game, @Nullable Entity ae, @Nullable Entity te, Coords c1,
@@ -777,6 +799,16 @@ public class LosEffects {
     }
 
     public static LosEffects calculateLos(Game game, AttackInfo ai) {
+        boolean useDiagramLos = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_LOS1);
+        boolean useDeadZones = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DEAD_ZONES);
+        boolean usePartialCover = game.getOptions()
+              .booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_PARTIAL_COVER);
+        logger.debug("=== LOS CALC START === rules: {} | deadZones:{} partialCover:{} | "
+                    + "attacker@{} (absH:{}, h:{}, isMek:{}) -> target@{} (absH:{}, h:{}, isMek:{})",
+              useDiagramLos ? "TacOps Diagrammed LOS" : "Standard TW LOS",
+              useDeadZones, usePartialCover,
+              ai.attackPos, ai.attackAbsHeight, ai.attackHeight, ai.attackerIsMek,
+              ai.targetPos, ai.targetAbsHeight, ai.targetHeight, ai.targetIsMek);
         if (ai.attOffBoard) {
             LosEffects los = new LosEffects();
             los.blocked = true;
@@ -822,6 +854,22 @@ public class LosEffects {
                     ((finalLoS.heavyWoods + finalLoS.heavySmoke) * 2) +
                     (finalLoS.ultraWoods * 3) < 3);
 
+        int combinedWoodsSmoke = (finalLoS.lightWoods + finalLoS.lightSmoke)
+              + ((finalLoS.heavyWoods + finalLoS.heavySmoke) * 2)
+              + (finalLoS.ultraWoods * 3);
+        logger.debug("=== LOS CALC RESULT === blocked:{} hasLoS:{} | "
+                    + "lightWoods:{} heavyWoods:{} ultraWoods:{} | "
+                    + "lightSmoke:{} heavySmoke:{} | "
+                    + "combinedWoodsSmoke:{} (blocks if >=3) | "
+                    + "screen:{} plantedFields:{} heavyIndustrial:{} | "
+                    + "buildingLevels:{} softBldg:{} hardBldg:{}",
+              finalLoS.blocked, finalLoS.hasLoS,
+              finalLoS.lightWoods, finalLoS.heavyWoods, finalLoS.ultraWoods,
+              finalLoS.lightSmoke, finalLoS.heavySmoke,
+              combinedWoodsSmoke,
+              finalLoS.screen, finalLoS.plantedFields, finalLoS.heavyIndustrial,
+              finalLoS.buildingLevelsOrHexes, finalLoS.softBuildings, finalLoS.hardBuildings);
+
         finalLoS.targetLoc = ai.targetPos;
         return finalLoS;
     }
@@ -838,6 +886,18 @@ public class LosEffects {
     }
 
     public ToHitData losModifiers(Game game, int eiStatus, boolean underwaterWeapon) {
+        logger.debug("--- losModifiers() --- blocked:{} arcedShot:{} ei:{} underwater:{} | "
+                    + "lightWoods:{} heavyWoods:{} ultraWoods:{} | "
+                    + "lightSmoke:{} heavySmoke:{} | "
+                    + "woodsOnly:{} smokeOnly:{} combined:{} | "
+                    + "buildingLvls:{} screen:{} fields:{} heavyInd:{}",
+              blocked, arcedShot, eiStatus, underwaterWeapon,
+              lightWoods, heavyWoods, ultraWoods,
+              lightSmoke, heavySmoke,
+              lightWoods + (heavyWoods * 2),
+              lightSmoke + (heavySmoke * 2),
+              (lightWoods + lightSmoke) + ((heavyWoods + heavySmoke) * 2) + (ultraWoods * 3),
+              buildingLevelsOrHexes, screen, plantedFields, heavyIndustrial);
         ToHitData modifiers = new ToHitData();
 
         if (arcedShot) {
@@ -852,23 +912,45 @@ public class LosEffects {
          */
 
         if (blocked) {
+            logger.debug("losModifiers: BLOCKED by terrain (hill/elevation)");
             return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by terrain.");
         }
 
         if (infProtected) {
+            logger.debug("losModifiers: BLOCKED - infantry protected by building");
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Infantry protected by building.");
         }
 
         if (buildingLevelsOrHexes > 2) {
+            logger.debug("losModifiers: BLOCKED by {} building levels/hexes (>2)", buildingLevelsOrHexes);
             return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by building hexes or levels.");
         }
 
-        if ((ultraWoods >= 1) || (lightWoods + (heavyWoods * 2) > 2)) {
-            return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by woods.");
+        // LOS blocking is not affected by EI - EI only reduces to-hit modifiers (IO p.69)
+        // Ultra woods always blocks regardless of underwater weapon status
+        if (ultraWoods >= 1) {
+            logger.debug("losModifiers: BLOCKED by ultra woods ({})", ultraWoods);
+            return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by ultra woods.");
         }
 
-        if (!underwaterWeapon && (lightSmoke + (heavySmoke * 2) > 2)) {
-            return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by smoke.");
+        if (underwaterWeapon) {
+            // Underwater: smoke doesn't apply, only woods count
+            if (lightWoods + (heavyWoods * 2) > 2) {
+                logger.debug("losModifiers: BLOCKED by woods underwater (woodsTotal:{})",
+                      lightWoods + (heavyWoods * 2));
+                return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by woods.");
+            }
+        } else {
+            // Woods and smoke effects are combined for blocking threshold (TW LOS rules).
+            // This matches the hasLoS calculation in calculateLos().
+            int combinedWoodsSmokeTotal = (lightWoods + lightSmoke)
+                  + ((heavyWoods + heavySmoke) * 2);
+            if (combinedWoodsSmokeTotal >= 3) {
+                logger.debug("losModifiers: BLOCKED by woods+smoke (combined:{}, "
+                            + "lightWoods:{} heavyWoods:{} lightSmoke:{} heavySmoke:{})",
+                      combinedWoodsSmokeTotal, lightWoods, heavyWoods, lightSmoke, heavySmoke);
+                return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by intervening woods/smoke.");
+            }
         }
 
         if (plantedFields > 5) {
@@ -883,10 +965,6 @@ public class LosEffects {
             return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by screen.");
         }
 
-        if (!underwaterWeapon && (lightSmoke + (heavySmoke * 2) + lightWoods + (heavyWoods * 2) > 2)) {
-            return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by smoke and woods.");
-        }
-
         if (plantedFields > 0) {
             modifiers.addModifier((int) Math.floor(plantedFields / 2.0), plantedFields + " intervening planted fields");
         }
@@ -896,43 +974,40 @@ public class LosEffects {
         }
 
         if (lightWoods > 0) {
-            if (eiStatus > 0) {
-                modifiers.addModifier(1, "firing through light woods with EI system");
-            } else {
-                modifiers.addModifier(lightWoods, lightWoods + " intervening light woods");
-            }
+            // EI reduces woods modifier by 1 per hex, minimum +1 per hex (IO p.69)
+            // Light woods is already +1, so EI provides no benefit
+            modifiers.addModifier(lightWoods, lightWoods + " intervening light woods");
         }
 
+        // EI does not affect building modifiers - IO p.69 only mentions woods, jungle, smoke
         if (buildingLevelsOrHexes > 0) {
-            if (eiStatus > 0) {
-                modifiers.addModifier(1, "firing through building hex/level with EI system");
-            } else {
-                modifiers.addModifier(buildingLevelsOrHexes,
-                      buildingLevelsOrHexes + " intervening building levels or hexes");
-            }
+            modifiers.addModifier(buildingLevelsOrHexes,
+                  buildingLevelsOrHexes + " intervening building levels or hexes");
         }
 
         if (heavyWoods > 0) {
+            // Always add full heavy woods modifier (+2 per hex)
+            modifiers.addModifier(heavyWoods * 2, heavyWoods + " intervening heavy woods");
             if (eiStatus > 0) {
-                modifiers.addModifier(heavyWoods, heavyWoods + " intervening heavy woods");
-            } else {
-                modifiers.addModifier(heavyWoods * 2, heavyWoods + " intervening heavy woods");
+                // EI reduces woods modifier by 1 per hex, minimum +1 per hex (IO p.69)
+                // Track in ToHitData for combined EI modifier at the end
+                modifiers.addEiReduction(heavyWoods);
             }
         }
 
         if (lightSmoke > 0 && !underwaterWeapon) {
+            // EI reduces smoke modifier by 1 per hex, minimum +1 per hex (IO p.69)
+            // Light smoke is already +1, so EI provides no benefit
             modifiers.addModifier(lightSmoke, lightSmoke + " intervening light smoke");
         }
 
         if (heavySmoke > 0 && !underwaterWeapon) {
-            StringBuilder text = new StringBuilder(heavySmoke);
-            text.append(" intervening");
-            text.append(" heavy");
-            text.append(" smoke");
+            // Always add full heavy smoke modifier (+2 per hex)
+            modifiers.addModifier(heavySmoke * 2, heavySmoke + " intervening heavy smoke");
             if (eiStatus > 0) {
-                modifiers.addModifier(heavySmoke, text.toString());
-            } else {
-                modifiers.addModifier(heavySmoke * 2, text.toString());
+                // EI reduces heavy smoke modifier by 1 per hex (IO p.69)
+                // Track in ToHitData for combined EI modifier at the end
+                modifiers.addEiReduction(heavySmoke);
             }
         }
 
@@ -976,7 +1051,7 @@ public class LosEffects {
               Compute.isInBuilding(game,
                     ai.attackAbsHeight - game.getHex(ai.attackPos, ai.boardId).getLevel(),
                     ai.attackPos, ai.boardId)) {
-            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.get(0)));
+            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.getFirst()));
             // elevation differences count as building hexes passed through
             los.buildingLevelsOrHexes += (Math.abs((ai.attackAbsHeight - ai.attackHeight) -
                   (ai.targetAbsHeight - ai.targetHeight)));
@@ -1030,7 +1105,7 @@ public class LosEffects {
               Compute.isInBuilding(game,
                     ai.attackAbsHeight - game.getHex(ai.attackPos, ai.boardId).getLevel(),
                     ai.attackPos, ai.boardId)) {
-            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.get(0)));
+            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.getFirst()));
             // elevation differences count as building hexes passed through
             los.buildingLevelsOrHexes += (Math.abs((ai.attackAbsHeight - ai.attackHeight) -
                   (ai.targetAbsHeight - ai.targetHeight)));
@@ -1395,11 +1470,16 @@ public class LosEffects {
             }
             // planted fields only rise one level above the terrain
             if (hex.containsTerrain(Terrains.FIELDS)) {
-                if (((hexEl + 1 > ai.attackAbsHeight) && (hexEl + 2 > ai.targetAbsHeight)) ||
-                      ((hexEl + 1 > ai.attackAbsHeight) && attackerAdjacent) ||
-                      ((hexEl + 1 > ai.targetAbsHeight) && targetAdjacent)) {
+                int terrainEl = hexEl + 1;
+                if (diagramLoS) {
+                    affectsLos = terrainEl >= losElevation;
+                } else {
+                    affectsLos = (terrainEl > maxUnitHeight) ||
+                          ((terrainEl > ai.attackAbsHeight) && attackerAdjacent) ||
+                          ((terrainEl > ai.targetAbsHeight) && targetAdjacent);
+                }
+                if (affectsLos) {
                     los.plantedFields++;
-
                 }
             }
 
@@ -1411,6 +1491,15 @@ public class LosEffects {
                   false);
             int smokeLevel = hex.terrainLevel(Terrains.SMOKE);
             boolean hasFoliage = (woodsLevel != Terrain.LEVEL_NONE) || (jungleLevel != Terrain.LEVEL_NONE);
+
+            if (hasFoliage || smokeLevel != Terrain.LEVEL_NONE) {
+                logger.debug("  Hex {} (elev:{}) terrain: woods:{} jungle:{} foliageElev:{} smoke:{} | "
+                            + "losElev:{} maxUnitH:{} attAbsH:{} tgtAbsH:{} attAdj:{} tgtAdj:{}",
+                      coords, hexEl, woodsLevel, jungleLevel, foliageElev, smokeLevel,
+                      String.format("%.1f", losElevation), maxUnitHeight,
+                      ai.attackAbsHeight, ai.targetAbsHeight,
+                      attackerAdjacent, targetAdjacent);
+            }
 
             // Check 1 level high woods and jungle
             if (hasFoliage && foliageElev == 1) {
@@ -1425,11 +1514,16 @@ public class LosEffects {
                 if (affectsLos) {
                     if ((woodsLevel == 1) || (jungleLevel == 1)) {
                         los.lightWoods++;
+                        logger.debug("    -> {} counted as LIGHT WOODS (1-level foliage)", coords);
                     } else if ((woodsLevel == 2) || (jungleLevel == 2)) {
                         los.heavyWoods++;
+                        logger.debug("    -> {} counted as HEAVY WOODS (1-level foliage)", coords);
                     } else {
                         los.ultraWoods++;
+                        logger.debug("    -> {} counted as ULTRA WOODS (1-level foliage)", coords);
                     }
+                } else {
+                    logger.debug("    -> {} 1-level foliage does NOT affect LOS (below line)", coords);
                 }
             }
 
@@ -1452,16 +1546,24 @@ public class LosEffects {
                         case SmokeCloud.SMOKE_CHAFF_LIGHT:
                         case SmokeCloud.SMOKE_GREEN:
                             los.lightSmoke++;
+                            logger.debug("    -> {} counted as LIGHT SMOKE (2-level check)", coords);
                             break;
                         case SmokeCloud.SMOKE_HEAVY:
                             los.heavySmoke++;
+                            logger.debug("    -> {} counted as HEAVY SMOKE (2-level check)", coords);
                             break;
                     }
                     // Check woods/jungle
                     if ((woodsLevel == 1) || (jungleLevel == 1)) {
                         los.lightWoods++;
+                        logger.debug("    -> {} counted as LIGHT WOODS (2-level foliage)", coords);
                     } else if ((woodsLevel == 2) || (jungleLevel == 2)) {
                         los.heavyWoods++;
+                        logger.debug("    -> {} counted as HEAVY WOODS (2-level foliage)", coords);
+                    }
+                } else {
+                    if (smokeLevel != Terrain.LEVEL_NONE || hasFoliage) {
+                        logger.debug("    -> {} 2-level smoke/foliage does NOT affect LOS (below line)", coords);
                     }
                 }
 
