@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2005 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -36,8 +36,6 @@ package megamek.common.compute;
 
 import static java.lang.Math.max;
 import static java.lang.Math.min;
-import static megamek.codeUtilities.MathUtility.clamp;
-import static megamek.common.equipment.AmmoType.Munitions.M_INCENDIARY_LRM;
 
 import java.util.*;
 
@@ -330,7 +328,7 @@ public class Compute {
 
         // Compute sum in long to avoid overflow, then clamp to int range
         long sum = (long) highest + (long) second;
-        return (int) clamp(sum, Integer.MIN_VALUE, Integer.MAX_VALUE);
+        return Math.clamp(sum, Integer.MIN_VALUE, Integer.MAX_VALUE);
     }
 
     /**
@@ -438,13 +436,13 @@ public class Compute {
      * would not. The returned entity is the entity causing the violation.
      * <p>
      * The position and elevation for the stacking violation are derived from the Entity represented by the passed
-     * Entity ID.
-     * By default, ignores hidden units.
+     * Entity ID. By default, ignores hidden units.
      *
      * @param game       The Game instance
      * @param enteringId The gameId of the moving Entity
      * @param coords     The hex being entered
      * @param climbMode  The moving Entity's climb mode at the point it enters the destination hex
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, int enteringId, Coords coords, boolean climbMode) {
@@ -461,12 +459,13 @@ public class Compute {
      * <p>
      * The position and elevation for the stacking violation are derived from the passed Entity.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -481,13 +480,14 @@ public class Compute {
      * <p>
      * The position is derived from the passed Entity, while the elevation is derived from the passed Entity parameter.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -496,16 +496,18 @@ public class Compute {
               elevation, dest, entering.getBoardId(), transport, climbMode, ignoreHidden);
     }
 
-    /** Used by Princess / bots for checking deployment positions.
+    /**
+     * Used by Princess / bots for checking deployment positions.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
      * @param origPosition The coords of the hex the moving Entity is leaving
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -517,14 +519,15 @@ public class Compute {
     /**
      * Board-aware check used when compiling movepaths
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param destBoardId Allows setting a different board for checking destination hex
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param destBoardId  Allows setting a different board for checking destination hex
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -544,10 +547,11 @@ public class Compute {
      * @param origPosition The coords of the hex the moving Entity is leaving
      * @param elevation    The elevation of the moving Entity
      * @param dest         The hex being entered
-     * @param destBoardId Allows setting a different board for checking destination hex
+     * @param destBoardId  Allows setting a different board for checking destination hex
      * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
      * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -565,13 +569,13 @@ public class Compute {
 
         // LAM in fighter mode shouldn't be treated as a Mek for all this
         boolean isMek =
-              ((entering instanceof Mek) && !(entering instanceof LandAirMek lam && lam.getConversionMode() == LandAirMek.CONV_MODE_FIGHTER))
-              || (entering instanceof SmallCraft);
+              ((entering instanceof Mek) && !(entering instanceof LandAirMek lam
+                    && lam.getConversionMode() == LandAirMek.CONV_MODE_FIGHTER))
+                    || (entering instanceof SmallCraft);
         boolean isLargeSupport = (entering instanceof LargeSupportTank)
               || (entering instanceof Dropship)
               || ((entering instanceof Mek) && entering.isSuperHeavy());
 
-        boolean isTrain = !entering.getAllTowedUnits().isEmpty();
         boolean isDropship = entering instanceof Dropship;
         boolean isInfantry = entering instanceof Infantry;
         Entity firstEntity = transport;
@@ -1413,8 +1417,7 @@ public class Compute {
 
         // allow naval units to target underwater units,
         // torpedo tubes are mounted underwater
-        if ((targetUnderwater || (weaponType.getAmmoType() == AmmoTypeEnum.LRM_TORPEDO) ||
-              (weaponType.getAmmoType() == AmmoTypeEnum.SRM_TORPEDO))
+        if ((targetUnderwater || (weaponType.getAmmoType() != null && weaponType.getAmmoType().isTorpedo()))
               && (attackingEntity.getUnitType() == UnitType.NAVAL)) {
             weaponUnderwater = true;
             weaponRanges = weaponType.getWRanges();
@@ -1466,8 +1469,7 @@ public class Compute {
             }
         } else if (targetUnderwater) {
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Target underwater, but not weapon.");
-        } else if ((weaponType.getAmmoType() == AmmoTypeEnum.LRM_TORPEDO)
-              || (weaponType.getAmmoType() == AmmoTypeEnum.SRM_TORPEDO)) {
+        } else if (weaponType.getAmmoType() != null && weaponType.getAmmoType().isTorpedo()) {
             // Torpedoes only fire underwater.
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Weapon can only fire underwater.");
         }
@@ -1682,13 +1684,13 @@ public class Compute {
                     rangeModifier = attackingEntity.getExtremeRangeModifier();
                 }
                 if ((c3ecmRange == RangeType.RANGE_SHORT) || (c3ecmRange == RangeType.RANGE_MINIMUM)) {
-                    rangeModifier = (int) (rangeModifier + attackingEntity.getShortRangeModifier()) / 2;
+                    rangeModifier = (rangeModifier + attackingEntity.getShortRangeModifier()) / 2;
                     mods.addModifier(rangeModifier, "short range due to C3 spotter under ECM");
                 } else if (c3ecmRange == RangeType.RANGE_MEDIUM) {
-                    rangeModifier = (int) (rangeModifier + attackingEntity.getMediumRangeModifier()) / 2;
+                    rangeModifier = (rangeModifier + attackingEntity.getMediumRangeModifier()) / 2;
                     mods.addModifier(rangeModifier, "medium range due to C3 spotter under ECM");
                 } else if (c3ecmRange == RangeType.RANGE_LONG) {
-                    rangeModifier = (int) (rangeModifier + attackingEntity.getLongRangeModifier()) / 2;
+                    rangeModifier = (rangeModifier + attackingEntity.getLongRangeModifier()) / 2;
                     mods.addModifier(rangeModifier, "long range due to C3 spotter under ECM");
                 }
             } else {
@@ -1726,7 +1728,8 @@ public class Compute {
         if (isWeaponInfantry) {
             mods = Compute.getInfantryRangeMods(min(distance, c3dist),
                   (InfantryWeapon) weaponType,
-                  (attackingEntity instanceof Infantry) ? ((Infantry) attackingEntity).getSecondaryWeapon() : null,
+                  (attackingEntity instanceof ConvInfantry infantry) ? infantry.getSecondaryWeapon() :
+                        null,
                   weaponUnderwater);
 
             int rangeModifier = mods.getValue();
@@ -1907,12 +1910,6 @@ public class Compute {
         return mods;
     }
 
-    /**
-     * Finds the effective distance between an attacker and a target. Includes the distance bonus if the attacker and
-     * target are in the same building and on different levels. Also takes account of altitude differences
-     *
-     * @return the effective distance
-     */
     /**
      * Calculates effective distance from a weapon's firing position to a target, accounting for altitude differences
      * and same-building elevation modifiers. This is used for entities with multiple firing positions like
@@ -2105,15 +2102,15 @@ public class Compute {
             distance += (2 * attacker.getAltitude());
         }
 
-        if (game.isOnSpaceMap(attacker) && !attacker.getPosition().equals(targetPos.get(0))) {
+        if (game.isOnSpaceMap(attacker) && !attacker.getPosition().equals(targetPos.getFirst())) {
             // Atmospheric hexes count as extra range
             Board attackerBoard = game.getBoard(attacker);
             Coords currentCoords = attacker.getPosition();
-            currentCoords = Coords.nextHex(currentCoords, targetPos.get(0));
+            currentCoords = Coords.nextHex(currentCoords, targetPos.getFirst());
             int safetyCounter = 0;
-            while (!currentCoords.equals(targetPos.get(0)) && (safetyCounter < 1000)) {
+            while (!currentCoords.equals(targetPos.getFirst()) && (safetyCounter < 1000)) {
                 safetyCounter++; // prevent infinite loops
-                currentCoords = Coords.nextHex(currentCoords, targetPos.get(0));
+                currentCoords = Coords.nextHex(currentCoords, targetPos.getFirst());
                 if (BoardHelper.isAtmosphericRow(game, attackerBoard, currentCoords)
                       || BoardHelper.isGroundRowHex(attackerBoard, currentCoords)) {
                     distance += BoardHelper.highAltAtmosphereRowRangeIncrease(game);
@@ -2832,6 +2829,12 @@ public class Compute {
             return new ToHitData(TargetRoll.AUTOMATIC_FAIL, "attacker sprinted");
         }
 
+        // While clearing woods with a saw, weapon attacks are penalized as running/flank speed
+        // (TM pp.241-243). Apply minimum +2 modifier if not already at or above that level.
+        if (entity.isClearingWoods() && (toHit.getValue() < (2 / dedicatedGunnerMod))) {
+            toHit = new ToHitData(2 / dedicatedGunnerMod, "clearing woods with saw");
+        }
+
         return toHit;
     }
 
@@ -2943,7 +2946,9 @@ public class Compute {
         if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_STANDING_STILL)
               && (entity.mpUsed == 0)
               && !entity.isImmobile()
-              && !((entity instanceof Infantry) || (entity instanceof VTOL) || (entity.isBuildingEntityOrGunEmplacement()))) {
+              && !((entity instanceof Infantry)
+              || (entity instanceof VTOL)
+              || (entity.isBuildingEntityOrGunEmplacement()))) {
             ToHitData toHit = new ToHitData();
             toHit.addModifier(-1, "target did not move");
             return toHit;
@@ -3178,13 +3183,17 @@ public class Compute {
               || (targetable.getTargetType() == Targetable.TYPE_HEX_BOMB)
               || (targetable.getTargetType() == Targetable.TYPE_HEX_ARTILLERY)
               || (targetable.getTargetType() == Targetable.TYPE_MINEFIELD_DELIVER))) {
-            if ((woodsLevel == 1) && (eiStatus != 2)) {
+            if (woodsLevel == 1) {
+                // EI reduces modifier by 1 per hex, minimum +1 per hex (IO p.69)
+                // Light woods is already +1, so EI provides no benefit
                 toHit.addModifier(1, woodsText);
             } else if (woodsLevel > 1) {
+                // Always add full woods modifier
+                toHit.addModifier(woodsLevel, woodsText);
                 if (eiStatus > 0) {
-                    toHit.addModifier(woodsLevel - 1, woodsText);
-                } else {
-                    toHit.addModifier(woodsLevel, woodsText);
+                    // EI reduces modifier by 1 per hex, minimum +1 per hex (IO p.69)
+                    // Track in ToHitData for combined EI modifier at the end
+                    toHit.addEiReduction(woodsLevel - 1);
                 }
             }
         }
@@ -3195,22 +3204,28 @@ public class Compute {
                 case SmokeCloud.SMOKE_LI_HEAVY:
                 case SmokeCloud.SMOKE_CHAFF_LIGHT:
                 case SmokeCloud.SMOKE_GREEN:
+                    // EI reduces modifier by 1 per hex, minimum +1 per hex (IO p.69)
+                    // Light smoke is already +1, so EI provides no benefit
                     toHit.addModifier(1, "target in light smoke");
                     break;
                 case SmokeCloud.SMOKE_HEAVY:
+                    // Always add full heavy smoke modifier
+                    toHit.addModifier(2, "target in heavy smoke");
                     if (eiStatus > 0) {
-                        toHit.addModifier(1, "target in heavy smoke");
-                    } else {
-                        toHit.addModifier(2, "target in heavy smoke");
+                        // EI reduces modifier by 1 per hex (IO p.69)
+                        // Track in ToHitData for combined EI modifier at the end
+                        toHit.addEiReduction(1);
                     }
                     break;
             }
         }
         if (hex.terrainLevel(Terrains.GEYSER) == 2) {
+            // Always add full geyser modifier
+            toHit.addModifier(2, "target in erupting geyser");
             if (eiStatus > 0) {
-                toHit.addModifier(1, "target in erupting geyser");
-            } else {
-                toHit.addModifier(2, "target in erupting geyser");
+                // EI reduces geyser modifier by 1 (IO p.69)
+                // Track in ToHitData for combined EI modifier at the end
+                toHit.addEiReduction(1);
             }
         }
 
@@ -3263,13 +3278,17 @@ public class Compute {
         }
 
         if (!game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_WOODS_COVER)) {
-            if ((woodsLevel == 1) && (eiStatus != 2)) {
+            if (woodsLevel == 1) {
+                // EI reduces modifier by 1 per hex, minimum +1 per hex (IO p.69)
+                // Light woods is already +1, so EI provides no benefit
                 toHit.addModifier(1, woodsText);
             } else if (woodsLevel > 1) {
+                // Always add full woods modifier
+                toHit.addModifier(woodsLevel, woodsText);
                 if (eiStatus > 0) {
-                    toHit.addModifier(woodsLevel - 1, woodsText);
-                } else {
-                    toHit.addModifier(woodsLevel, woodsText);
+                    // EI reduces modifier by 1 per hex, minimum +1 per hex (IO p.69)
+                    // Track in ToHitData for combined EI modifier at the end
+                    toHit.addEiReduction(woodsLevel - 1);
                 }
             }
         }
@@ -3280,24 +3299,31 @@ public class Compute {
             case SmokeCloud.SMOKE_LI_HEAVY:
             case SmokeCloud.SMOKE_CHAFF_LIGHT:
             case SmokeCloud.SMOKE_GREEN:
+                // EI reduces modifier by 1 per hex, minimum +1 per hex (IO p.69)
+                // Light smoke is already +1, so EI provides no benefit
                 toHit.addModifier(1, "target in light smoke");
                 break;
             case SmokeCloud.SMOKE_HEAVY:
+                // Always add full heavy smoke modifier
+                toHit.addModifier(2, "target in heavy smoke");
                 if (eiStatus > 0) {
-                    toHit.addModifier(1, "target in heavy smoke");
-                } else {
-                    toHit.addModifier(2, "target in heavy smoke");
+                    // EI reduces modifier by 1 per hex (IO p.69)
+                    // Track in ToHitData for combined EI modifier at the end
+                    toHit.addEiReduction(1);
                 }
                 break;
         }
 
         if (hex.terrainLevel(Terrains.GEYSER) == 2) {
+            // Always add full geyser modifier
+            toHit.addModifier(2, "erupting geyser");
             if (eiStatus > 0) {
-                toHit.addModifier(1, "erupting geyser");
-            } else {
-                toHit.addModifier(2, "erupting geyser");
+                // EI reduces geyser modifier by 1 (IO p.69)
+                // Track in ToHitData for combined EI modifier at the end
+                toHit.addEiReduction(1);
             }
         }
+
         return toHit;
     }
 
@@ -3365,6 +3391,27 @@ public class Compute {
         return waaHighest;
     }
 
+    /**
+     * Returns the weapon attack out of a list that has the second highest expected damage Used for Playtest 3 AMS
+     * engaging multiple salvos
+     */
+    public static WeaponAttackAction getSecondHighestExpectedDamage(Game g,
+          List<WeaponAttackAction> vAttacks, boolean assumeHit) {
+        WeaponAttackAction waaHighest;
+        WeaponAttackAction waaSecondHighest;
+
+        // Copy the list to a new list
+        List<WeaponAttackAction> attacksClone = new ArrayList<>(vAttacks);
+        // Find the highest damage
+        waaHighest = getHighestExpectedDamage(g, attacksClone, assumeHit);
+        // Remove that entry from the list
+        attacksClone.remove(waaHighest);
+        // Get the next highest damage
+        waaSecondHighest = getHighestExpectedDamage(g, attacksClone, assumeHit);
+        // Returns the second highest damage
+        return waaSecondHighest;
+    }
+
     // store these as constants since the tables will never change
     private static final float[] expectedHitsByRackSize = { 0.0f, 1.0f, 1.58f, 2.0f, 2.63f, 3.17f, 4.0f, 4.49f, 4.98f,
                                                             5.47f, 6.31f, 7.23f, 8.14f, 8.59f, 9.04f, 9.5f, 10.1f,
@@ -3425,6 +3472,14 @@ public class Compute {
      */
     public static float getExpectedDamage(Game game, WeaponAttackAction weaponAttackAction, boolean assumeHit,
           List<ECMInfo> allECMInfo) {
+
+        if (weaponAttackAction.getAssumedHit() == assumeHit && weaponAttackAction.getExpectedDamage() >= 0.0) {
+            // Reuse previous calc results
+            return weaponAttackAction.getExpectedDamage();
+        }
+
+        weaponAttackAction.setAssumedHit(assumeHit);
+
         boolean use_table = false;
 
         AmmoType loaded_ammo;
@@ -3433,6 +3488,7 @@ public class Compute {
         Entity target = game.getEntity(weaponAttackAction.getTargetId());
 
         if (attacker == null) {
+            weaponAttackAction.setExpectedDamage(0.0f);
             return 0.0f;
         }
 
@@ -3446,7 +3502,7 @@ public class Compute {
 
         ToHitData hitData = weaponAttackAction.toHit(game, allECMInfo);
 
-        if (attacker.isConventionalInfantry() && attacker instanceof Infantry infantry) {
+        if (attacker instanceof ConvInfantry infantry) {
             infShootingStrength = infantry.getShootingStrength();
             infDamagePerTrooper = infantry.getDamagePerTrooper();
         }
@@ -3460,6 +3516,7 @@ public class Compute {
             fChance = 1.0f;
         } else {
             if ((hitData.getValue() == TargetRoll.IMPOSSIBLE) || (hitData.getValue() == TargetRoll.AUTOMATIC_FAIL)) {
+                weaponAttackAction.setExpectedDamage(0.0f);
                 return 0.0f;
             }
 
@@ -3517,6 +3574,7 @@ public class Compute {
         if (use_table) {
             if (!(attacker instanceof BattleArmor)) {
                 if (weapon.getLinked() == null) {
+                    weaponAttackAction.setExpectedDamage(0.0f);
                     return 0.0f;
                 }
             }
@@ -3857,6 +3915,7 @@ public class Compute {
                 fDamage = min(infShootingStrength, fDamage);
             }
         }
+        weaponAttackAction.setExpectedDamage(fDamage);
         return fDamage;
     }
 
@@ -3866,6 +3925,7 @@ public class Compute {
      * infernos, do no damage or have special properties and so the damage is an estimation of effectiveness
      */
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static double getAmmoAdjDamage(Game game, WeaponAttackAction weaponAttackAction) {
         boolean noBin = true;
         boolean multiBin = false;
@@ -4273,7 +4333,7 @@ public class Compute {
     /**
      * Returns true if the line between source Coords and target goes through the hex in front of the attacker
      */
-    public static boolean isThroughFrontHex(Game game, Coords src, Entity t) {
+    public static boolean isThroughFrontHex(Coords src, Entity t) {
         Coords dest = t.getPosition();
         int fa = dest.degree(src) - (t.getFacing() * 60);
         if (fa < 0) {
@@ -4318,18 +4378,28 @@ public class Compute {
             return hasAnyFiringSolution(game, te.getId());
         }
         boolean teIlluminated = false;
+        boolean teEntityIlluminated = false;
+        boolean teUsingSearchlight = false;
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
             Entity te = (Entity) target;
-            teIlluminated = te.isIlluminated();
+            teEntityIlluminated = te.isIlluminated();
+            teUsingSearchlight = te.isUsingSearchlight();
+            teIlluminated = teEntityIlluminated;
             if (te.isOffBoard()) {
                 return false;
             }
         }
 
         // Target may be in an illuminated hex
+        boolean hexIlluminated = false;
         if (!teIlluminated) {
-            teIlluminated = !IlluminationLevel.determineIlluminationLevel(game, target.getBoardId(),
+            hexIlluminated = !IlluminationLevel.determineIlluminationLevel(game, target.getBoardId(),
                   target.getPosition()).isNone();
+            teIlluminated = hexIlluminated;
+        }
+        if (teIlluminated) {
+            LOGGER.debug("  illumination source for {}: entityIlluminated={} usingSearchlight={} hexIlluminated={}",
+                  target.getDisplayName(), teEntityIlluminated, teUsingSearchlight, hexIlluminated);
         }
 
         // if either does not have a position then return false
@@ -4349,7 +4419,9 @@ public class Compute {
             Entity targetedEntity = (Entity) target;
 
             // Beyond altitude 8, on ground maps, aerospace can't spot ground units
-            if (attackingEntity.isAirborneAeroOnGroundMap() && (attackingEntity.getAltitude() > 8) && !target.isAirborne()) {
+            if (attackingEntity.isAirborneAeroOnGroundMap()
+                  && (attackingEntity.getAltitude() > 8)
+                  && !target.isAirborne()) {
                 visualRange = 0;
             }
 
@@ -4360,7 +4432,7 @@ public class Compute {
                 visualRange = visualRange / 2;
             } else if (targetedEntity.isChameleonShieldActive()) {
                 visualRange = visualRange / 2;
-            } else if (targetedEntity.isConventionalInfantry() && ((Infantry) targetedEntity).hasSneakCamo()) {
+            } else if (targetedEntity instanceof ConvInfantry infantry && infantry.hasSneakCamo()) {
                 visualRange = visualRange / 2;
             }
 
@@ -4395,7 +4467,14 @@ public class Compute {
         int distance = attackingPos.distance(targetPos);
         // Need to track difference in altitude, not just add altitude to the range
         distance += Math.abs(2 * target.getAltitude() - 2 * attackingEntity.getAltitude());
-        return distance <= visualRange;
+        boolean inRange = distance <= visualRange;
+        LOGGER.debug("inVisualRange: {} -> {} | distance={} visualRange={} illuminated={} light={} inRange={}",
+              attackingEntity.getDisplayName(),
+              target.getDisplayName(),
+              distance, visualRange, teIlluminated,
+              game.getPlanetaryConditions().getLight(),
+              inRange);
+        return inRange;
 
     }
 
@@ -4407,6 +4486,7 @@ public class Compute {
      * @param game     The current {@link Game}
      * @param targetId - the ID# of the target entity we're looking for
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static boolean isAnySensorContact(Game game, int targetId) {
         Entity targetEntity = game.getEntity(targetId);
 
@@ -4458,11 +4538,10 @@ public class Compute {
     /**
      * Calculates the ECM effects in play between a detector and target pair
      *
-     * @param game            The current {@link Game}
      * @param attackingEntity - the entity making a sensor scan
      * @param target          - the entity we're trying to spot
      */
-    private static int calcSpaceECM(Game game, Entity attackingEntity, Targetable target) {
+    private static int calcSpaceECM(Entity attackingEntity, Targetable target) {
         int mod = 0;
         int ecm = ComputeECM.getLargeCraftECM(attackingEntity, attackingEntity.getPosition(), target.getPosition());
         if (!attackingEntity.isLargeCraft()) {
@@ -4695,7 +4774,7 @@ public class Compute {
 
         // Apply ECM/ECCM effects
         if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_AERO_RULES_STRATOPS_ECM)) {
-            tn += calcSpaceECM(game, ae, target);
+            tn += calcSpaceECM(ae, target);
         }
 
         // Apply large craft sensor shadows
@@ -4723,6 +4802,7 @@ public class Compute {
         return roll >= tn;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static boolean calcFutureTargetFiringSolution(Game game, Entity attacker,
           Targetable target, Coords futureTargetPosition) {
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
@@ -4797,7 +4877,7 @@ public class Compute {
 
         // Apply ECM/ECCM effects
         if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_AERO_RULES_STRATOPS_ECM)) {
-            tn += calcSpaceECM(game, attacker, target);
+            tn += calcSpaceECM(attacker, target);
         }
 
         // Apply large craft sensor shadows
@@ -4906,7 +4986,7 @@ public class Compute {
 
         // Apply ECM/ECCM effects
         if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_AERO_RULES_STRATOPS_ECM)) {
-            tn += calcSpaceECM(game, ae, target);
+            tn += calcSpaceECM(ae, target);
         }
 
         // Apply large craft sensor shadows
@@ -5042,7 +5122,17 @@ public class Compute {
         if (isAirToAir(game, ae, target) && game.getBoard(ae).isGround()) {
             distance = (int) Math.ceil(distance / 16.0);
         }
-        return (distance > minSensorRange) && (distance <= maxSensorRange);
+        boolean inRange = (distance > minSensorRange) && (distance <= maxSensorRange);
+        LOGGER.debug("inSensorRange: {} -> {} | sensor={} bracket={} rangePerBracket={} "
+                    + "minRange={} maxRange={} distance={} inclusive={} inRange={}",
+              ae.getDisplayName(),
+              target.getDisplayName(),
+              (ae.getActiveSensor() != null ? ae.getActiveSensor().getDisplayName() : "none"),
+              bracket, range,
+              minSensorRange, maxSensorRange, distance,
+              game.getOptions().booleanOption(OptionsConstants.ADVANCED_INCLUSIVE_SENSOR_RANGE),
+              inRange);
+        return inRange;
     }
 
     /**
@@ -5068,11 +5158,13 @@ public class Compute {
         if (los == null) {
             los = LosEffects.calculateLOS(game, ae, target);
         }
-        boolean isVisible = los.canSee() && Compute.inVisualRange(game, los, ae, target);
-        if (useSensors) {
-            isVisible = isVisible
-                  || Compute.inSensorRange(game, los, ae, target, allECMInfo);
-        }
+        boolean hasLos = los.canSee();
+        boolean visual = hasLos && Compute.inVisualRange(game, los, ae, target);
+        boolean viaSensors = useSensors && Compute.inSensorRange(game, los, ae, target, allECMInfo);
+        boolean isVisible = visual || viaSensors;
+        LOGGER.debug("canSee: {} -> {} | useSensors={} hasLOS={} visual={} viaSensors={} result={}",
+              ae.getDisplayName(), target.getDisplayName(),
+              useSensors, hasLos, visual, viaSensors, isVisible);
         return isVisible;
     }
 
@@ -5385,7 +5477,7 @@ public class Compute {
         }
         nRoll += nMod;
         if (!advancedAMS) {
-            nRoll = min(max(nRoll, 2), 12);
+            nRoll = Math.clamp(nRoll, 2, 12);
         } else {
             nRoll = min(nRoll, 12);
         }
@@ -5743,9 +5835,9 @@ public class Compute {
             return data;
         }
 
-        if (attacker instanceof BattleArmor) {
+        if (attacker instanceof BattleArmor battleArmor) {
             // Battle Armor units can't do an AM Attack if they're burdened.
-            if (((BattleArmor) attacker).isBurdened()) {
+            if (battleArmor.isBurdened()) {
                 data.addModifier(TargetRoll.IMPOSSIBLE,
                       "Launcher not jettisoned.");
                 return data;
@@ -5768,7 +5860,7 @@ public class Compute {
             }
         } else {
             // Infantry can't have encumbering armor
-            if (attacker.isArmorEncumbering()) {
+            if (((ConvInfantry) attacker).isArmorEncumbering()) {
                 data.addModifier(TargetRoll.IMPOSSIBLE,
                       "can't engage in anti-mek attacks with encumbering armor.");
                 return data;
@@ -5813,15 +5905,30 @@ public class Compute {
         // Prosthetic enhancement anti-Mek bonus (Grappler or Climbing Claws) - IO p.84
         // Uses the best (most negative) modifier from either enhancement slot
         // Only applies if the unit has the MD_PL_ENHANCED or MD_PL_I_ENHANCED ability
-        if (attacker.hasProstheticEnhancement()
+        if (attacker instanceof ConvInfantry attackingInfantry && attackingInfantry.hasProstheticEnhancement()
               && (attacker.hasAbility(OptionsConstants.MD_PL_ENHANCED)
               || attacker.hasAbility(OptionsConstants.MD_PL_I_ENHANCED))) {
-            int antiMekMod = attacker.getBestProstheticAntiMekModifier();
+            int antiMekMod = attackingInfantry.getBestProstheticAntiMekModifier();
             if (antiMekMod != 0) {
-                String modName = attacker.getBestProstheticAntiMekName();
+                String modName = attackingInfantry.getBestProstheticAntiMekName();
                 data.addModifier(antiMekMod,
                       modName != null ? modName : Messages.getString("Compute.ProstheticEnhancement"));
             }
+        }
+
+        // Mountain Troops anti-Mek bonus - TO:AUE p.153
+        // "Mountain troops apply a -2 modifier to any Anti-Mek Skill Rolls"
+        if (attacker instanceof ConvInfantry attackingInfantry
+              && attackingInfantry.hasSpecialization(ConvInfantry.MOUNTAIN_TROOPS)) {
+            data.addModifier(-2, Messages.getString("Compute.MountainTroops"));
+        }
+
+        // Enhanced Imaging bonus for anti-Mek attacks - IO p.69
+        // "All Piloting Skill rolls required for the EI-equipped unit receives a -1
+        // target number modifier. This includes checks made for physical attacks,
+        // as well as anti-Mek attacks by EI-equipped battle armor."
+        if (attacker.hasActiveEiCockpit()) {
+            data.addModifier(-1, Messages.getString("Compute.EnhancedImaging"));
         }
 
         // swarm/leg attacks take target movement mods into account
@@ -6569,12 +6676,12 @@ public class Compute {
             case WeaponType.WEAPON_DIRECT_FIRE -> Messages.getString("WeaponType.DirectFire");
             case WeaponType.WEAPON_CLUSTER_BALLISTIC -> Messages.getString("WeaponType.BallisticCluster");
             case WeaponType.WEAPON_PULSE -> Messages.getString("WeaponType.Pulse");
-            case WeaponType.WEAPON_CLUSTER_MISSILE,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_1D6,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_2D6,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_3D6 -> Messages.getString("WeaponType.Missile");
+            case WeaponType.WEAPON_CLUSTER_MISSILE -> Messages.getString("WeaponType.Missile");
+            case WeaponType.WEAPON_CLUSTER_MISSILE_1D6 -> Messages.getString("WeaponType.Missile") + " (+ 1d6)";
+            case WeaponType.WEAPON_CLUSTER_MISSILE_2D6 -> Messages.getString("WeaponType.Missile") + " (+ 2d6)";
+            case WeaponType.WEAPON_CLUSTER_MISSILE_3D6 -> Messages.getString("WeaponType.Missile") + " (+ 3d6)";
             case WeaponType.WEAPON_BURST_HALF_D6 -> Messages.getString("WeaponType.BurstHalf");
-            default -> String.format("%s (%dD6)", Messages.getString("WeaponType.Burst"),
+            default -> String.format("%s (%dd6)", Messages.getString("WeaponType.Burst"),
                   burstMultiplier * (damageType - WeaponType.WEAPON_BURST_HALF_D6));
         };
     }
@@ -6611,7 +6718,7 @@ public class Compute {
      */
     public static int computeTotalDamage(WeaponMounted weapon) {
         int totalDmg = 0;
-        if (weapon.isBombMounted() || !weapon.isCrippled()) {
+        if (!weapon.isCrippled()) {
             WeaponType type = weapon.getType();
             if (type.getDamage() == WeaponType.DAMAGE_VARIABLE) {
                 // Estimate rather than compute exact bay / trooper damage sum.
@@ -6637,13 +6744,14 @@ public class Compute {
 
     /**
      * Method replicates the Non-Conventional Damage against Infantry damage table as well as shifting for direct blows.
-     * also adjust for non-infantry damaging mechanized infantry
+     * also adjust for non-infantry damaging mechanized infantry. No mods for Plasma weapons.
      *
      * @param damage                         The base amount of damage
      * @param mos                            The margin of success
      * @param damageType                     The damage class of the weapon, used to adjust damage against infantry
      * @param isNonInfantryAgainstMechanized Whether this is a non-infantry attack against mechanized infantry
-     * @param isAttackThruBuilding           Whether the attack is coming through a building hex
+     * @param isAttackThruBuilding           Whether the attack involves attacker and target both within the same
+     *                                       building
      * @param attackerId                     The entity id of the attacking unit
      * @param vReport                        The report messages vector
      * @param mgaSize                        For machine gun array attacks, the number of linked weapons. For other
@@ -6656,86 +6764,144 @@ public class Compute {
           boolean isAttackThruBuilding, int attackerId, Vector<Report> vReport,
           int mgaSize) {
 
-        int origDamageType = damageType;
+        // Report initial (original) damage
+        Report r = new Report();
+        r.subject = attackerId;
+        r.indent(2);
+        r.add((int) damage); // field 1
+        r.add(getDamageTypeString(damageType, mgaSize)); // field 2
+        r.messageId = 9970;
+        String mod = "1:1";
+
+        // Update for MOS
         damageType += mos;
-        double origDamage = damage;
+        double priorDamage = damage;
+
         switch (damageType) {
             case WeaponType.WEAPON_DIRECT_FIRE:
                 damage /= 10;
+                mod = "1/10";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_BALLISTIC:
                 damage /= 10;
                 damage++;
+                mod = "1/10 + 1";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_PULSE:
                 damage /= 10;
                 damage += 2;
+                mod = "1/10 + 2";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE:
                 damage /= 5;
+                mod = "1/5";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_1D6:
                 damage /= 5;
+                mod = "1/5 + 1d6";
                 damage += Compute.d6();
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_2D6:
                 damage /= 5;
+                mod = "1/5 + 2d6";
                 damage += Compute.d6(2);
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_3D6:
                 damage /= 5;
+                mod = "1/5 + 3d6";
                 damage += Compute.d6(3);
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_BURST_HALF_D6:
                 damage = Compute.d6() / 2.0;
+                priorDamage = damage;
+                mod = "-> 1d6 / 2";
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_1D6:
                 damage = Compute.d6(mgaSize);
+                priorDamage = damage;
+                mod = "1d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_2D6:
                 damage = Compute.d6(2 * mgaSize);
+                priorDamage = damage;
+                mod = "2d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_3D6:
                 damage = Compute.d6(3 * mgaSize);
+                priorDamage = damage;
+                mod = "3d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_4D6:
                 damage = Compute.d6(4 * mgaSize);
+                priorDamage = damage;
+                mod = "4d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_5D6:
                 damage = Compute.d6(5 * mgaSize);
+                priorDamage = damage;
+                mod = "5d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_6D6:
                 damage = Compute.d6(6 * mgaSize);
+                priorDamage = damage;
+                mod = "6d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_7D6:
                 damage = Compute.d6(7 * mgaSize);
+                priorDamage = damage;
+                mod = "7d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
         }
         damage = Math.ceil(damage);
+        priorDamage = Math.ceil(priorDamage);
+
+        if (mos != 0) {
+            // List MOS change to damage
+            r.extend(9971);
+            r.add(getDamageTypeString(damageType, mgaSize)); // new field in 9971
+        }
+
+        r.extend(9972);
+        r.add((int) priorDamage);
+        r.add(mod);
+
+        if (isAttackThruBuilding && (priorDamage != damage)) {
+            // Indicates damage halved for thru-building attack; priorDamage != damage
+            r.extend(9972);
+            r.add((int) damage);
+            r.add(ReportMessages.getString(String.valueOf(9973)));
+        }
 
         // according to the following ruling, the half damage that mechanized
         // inf get against burst fire should trump the double damage they get
@@ -6747,31 +6913,16 @@ public class Compute {
             } else {
                 damage /= 2;
             }
+            r.extend(9972);
+            // Per TW 7th Ed. pg 217 (and our wonky implementation) this damage is *not* rounded up.
+            r.add((int) damage);
+            r.add(ReportMessages.getString(String.valueOf(9974)));
         }
 
         if (vReport != null) {
-            Report r = new Report();
-            r.subject = attackerId;
-            r.indent(2);
-
-            r.add(getDamageTypeString(origDamageType, mgaSize));
-            if (origDamageType != damageType) {
-                if (isAttackThruBuilding) {
-                    r.messageId = 9973;
-                } else {
-                    r.messageId = 9972;
-                }
-                r.add(getDamageTypeString(damageType, mgaSize));
-            } else if (isAttackThruBuilding) {
-                r.messageId = 9971;
-            } else {
-                r.messageId = 9970;
-            }
-
-            r.add((int) origDamage);
-            r.add((int) damage);
             vReport.addElement(r);
         }
+
         return (int) damage;
     }
 
@@ -7084,36 +7235,41 @@ public class Compute {
                 }
 
                 switch (ammoType.getAmmoType()) {
-                    case SRM_STREAK:
-                    case LRM_STREAK:
-                    case LRM:
-                    case LRM_IMP:
-                    case LRM_TORPEDO:
-                    case SRM:
-                    case SRM_IMP:
-                    case SRM_TORPEDO:
-                    case MRM:
-                    case NARC:
-                    case INARC:
-                    case AMS:
-                    case ARROW_IV:
-                    case LONG_TOM:
-                    case SNIPER:
-                    case THUMPER:
-                    case SRM_ADVANCED:
-                    case LRM_TORPEDO_COMBO:
-                    case ATM:
-                    case IATM:
-                    case MML:
-                    case EXLRM:
-                    case NLRM:
-                    case TBOLT_5:
-                    case TBOLT_10:
-                    case TBOLT_15:
-                    case TBOLT_20:
-                    case HAG:
-                    case ROCKET_LAUNCHER:
+                    case SRM_STREAK,
+                         LRM_STREAK,
+                         LRM,
+                         LRM_IMP,
+                         LRM_TORPEDO,
+                         SRM,
+                         SRM_IMP,
+                         SRM_TORPEDO,
+                         MRM,
+                         NARC,
+                         INARC,
+                         AMS,
+                         ARROW_IV,
+                         LONG_TOM,
+                         SNIPER,
+                         THUMPER,
+                         SRM_ADVANCED,
+                         LRM_TORPEDO_COMBO,
+                         ATM,
+                         IATM,
+                         MML,
+                         EXLRM,
+                         NLRM,
+                         NLRM_TORPEDO,
+                         TBOLT_5,
+                         TBOLT_10,
+                         TBOLT_15,
+                         TBOLT_20,
+                         HAG,
+                         ROCKET_LAUNCHER -> {
                         return false;
+                    }
+                    default -> {
+                        // intentional fallthrough
+                    }
                 }
                 if (((ammoType.getAmmoType() == AmmoTypeEnum.AC_LBX_THB)
                       || (ammoType.getAmmoType() == AmmoTypeEnum.AC_LBX)
@@ -7700,7 +7856,8 @@ public class Compute {
                     // Infantry attacker needs long-range weapons that can hit an aircraft
                     return false;
                 } else {
-                    boolean hasFieldGuns = ((Infantry) attacker).hasActiveFieldWeapon();
+                    boolean hasFieldGuns =
+                          attacker instanceof ConvInfantry infantry && infantry.hasActiveFieldWeapon();
                     boolean hasInfantryAA = attacker.getEquipment().stream().anyMatch(
                           eq -> eq instanceof WeaponMounted
                                 && ((WeaponMounted) eq).getType().hasFlag(WeaponType.F_INF_AA)
@@ -7791,7 +7948,7 @@ public class Compute {
         // Get radius, base damage
         DamageFalloff falloff = AreaEffectHelper.calculateDamageFallOff(
               ammoType,
-              attacker.isBattleArmor() ? ((BattleArmor) attacker).getTroopers() : 0,
+              attacker.isBattleArmor() ? ((BattleArmor) attacker).getSquadSize() : 0,
               false
         );
 
@@ -7859,7 +8016,9 @@ public class Compute {
 
     /**
      * Fast log2 implementation; throws if number &le; 0
-     * @param number        positive int to get the log2 of
+     *
+     * @param number positive int to get the log2 of
+     *
      * @return int          approximate log2 of number; functionally (Math.floor(log10(10)/log10(2))
      */
     public static int log2(int number) throws IllegalArgumentException {
@@ -7870,16 +8029,18 @@ public class Compute {
     }
 
     /**
-     * Helper to get the coordinates from which a unit can load other units.  Not in Entity to avoid bloat.
-     * May need extension for different map types but unlikely.
-     * @param carrier   Entity that will be doing the loading
-     * @param position  Coords of hex to use as the center of the carrier; may not match carrier's current position
-     *                  value.
-     * @param boardId   For future use, e.g. low-altitude or multi-board maps
+     * Helper to get the coordinates from which a unit can load other units.  Not in Entity to avoid bloat. May need
+     * extension for different map types but unlikely.
+     *
+     * @param carrier  Entity that will be doing the loading
+     * @param position Coords of hex to use as the center of the carrier; may not match carrier's current position
+     *                 value.
+     * @param boardId  For future use, e.g. low-altitude or multi-board maps
+     *
      * @return ArrayList of Coords that the carrier entity can legally load units from
      */
     public static ArrayList<Coords> getLoadableCoords(Entity carrier, Coords position, int boardId) {
-        ArrayList<Coords> list = new ArrayList<Coords>();
+        ArrayList<Coords> list = new ArrayList<>();
         // No coords for no carrier
         if (carrier == null) {
             return list;
@@ -7889,12 +8050,15 @@ public class Compute {
         if (carrier.isDropShip() && carrier.isAeroLandedOnGroundMap()) {
             list.addAll(position.allAtDistance(2));
         } else if (
-              // SmallCraft, Large Support Vehicles, flying DropShips, and presumably spaceborne WarShips load from
-              // directly adjacent hexes
-              carrier instanceof SmallCraft ||
-              (carrier.isSupportVehicle() && (carrier.getWeightClass() == EntityWeightClass.WEIGHT_LARGE_SUPPORT)) ||
-              (carrier.isDropShip() && carrier.isAirborne()) ||
-              (carrier.isWarShip())
+            // SmallCraft, Large Support Vehicles, flying DropShips, and presumably spaceborne WarShips load from
+            // directly adjacent hexes
+              carrier instanceof SmallCraft
+                    ||
+                    (carrier.isSupportVehicle() && (carrier.getWeightClass() == EntityWeightClass.WEIGHT_LARGE_SUPPORT))
+                    ||
+                    (carrier.isDropShip() && carrier.isAirborne())
+                    ||
+                    (carrier.isWarShip())
         ) {
             list.addAll(position.allAtDistance(1));
         } else {
